--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
   </style>
 </head>
 <body>
+  
+
   <h1>TrackOn</h1>
+  <p style="text-align:center;"><img src="C:\Users\PRIYODIT\Desktop\TrackOn Web\.vscode\images\trackon.png"  height="100" width="100" alt="Logo"></p> 
   <form id="login-form">
     <h2>Login</h2>
     <label>Username</label>
@@ -86,7 +89,7 @@
   </form>
   
   <div id="bus-info" style="display:none;">
-    <h2>Select a Bus</h2>
+    <h2 style="text-align:center;">Select a Bus</h2>
     <select id="bus-select">
       <option value="bus1">Bus 1</option>
       <option value="bus2">Bus 2</option>
